sub/NNO-11591 Тесты должны включать assert* проверки